# koisk

./: .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  implementation.md  pyproject.toml  test_api.py
config/: config.yaml
docs/: Kiosk_LLM_API.postman_collection.json  TESTING.md  implementation.md
scripts/: demo_llm_rag.py  download-models.sh  run-llama-server.sh  setup-dev.sh  setup-llama-server.sh  setup-pi.sh  setup_pgvector.sh  start-llama-server.sh
src/: main.py
src/components/: __init__.py  asr.py  face_detection.py  llm_inference.py  rag.py  reranker.py  session_manager.py  tts.py
src/database/: models.py
src/frontend/: admin.html  audio-llm.html  audio-llm.js  auth.html  auth.js  common.js  contact.html  find-place.html  find-place.js  index.html  kb-ingest.html  kb-ingest.js  kiosk-main.html  kiosk.css  text-llm.html  text-llm.js  usage-stats.html  usage-stats.js
src/repositories/: knowledge_base_repository.py
src/schemas/: knowledge_base.py
src/server/: README.md  package-lock.json  package.json  proxy.js
src/services/: audio_recorder.py  component_manager.py  scrape_knowledge_base.py  settings.py
src/utils/: config.py  logging.py
tests/: test_knowledge_base_integration.py  test_llm_rag_integration.py  test_rag_end_to_end.py
